# SmartCommunity

./: .gitignore  CMakeLists.txt  README.md  main.c
Module/humiture/: CMakeLists.txt  humiture.c  humiture.h
Module/i2c_lcd1602/: CMakeLists.txt  i2c_lcd1602.c  i2c_lcd1602.h
Module/relay/: CMakeLists.txt  relay.c  relay.h
Module/rgb_led/: CMakeLists.txt  rgb_led.c  rgb_led.h
